--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="title">
-            Quieres ser mi amig@?
+            Quieres Estudiar con migo ellibro de Santigos?
         </div>
 
         <div class="buttons">
