--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DeclarateWey</title>
+    <title>BROMASDEJOSUE</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <div class="container">
         <div class="title">
-            Quieres Estudiar con migo ellibro de Santigos?
+            Quieres Estudiar conmigo el libro de Santigo?
         </div>
 
         <div class="buttons">
