--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
     <div class="container">
         <div class="title">
-            Quieres Estudiar conmigo el libro de Santigo?
+            <font color= "Navy">AMIG@ PUEDES RESPONER ESTA PREGUNTA?</font>
+        </div>
+        <div class="title">
+            
+            Quieres ir a la iglesia?
         </div>
 
         <div class="buttons">
