--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="container">
         <div class="title">
-            <font color= "Navy">AMIG@ PUEDES RESPONER ESTA PREGUNTA?</font>
+            <font color= "Navy">AMIG@ PUEDES RESPONER ESTA PREGUNTA🤔?</font>
         </div>
         <div class="title">
             
-            Quieres ir a la iglesia?
+            Quieres ir a la iglesia😏?
         </div>
 
         <div class="buttons">
