--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="title">
             
-            <font color= "Navy">Quieres ir a la iglesia😏?</font>
+            <font color= "Navy">Quieres ser mi novi@😏?</font>
         </div>
 
         <div class="buttons">
