--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="title">
             
-            <font color= "Navy">RECORER UN DIA MAS LA FECHA DE ENTREGA DE LA PRACTICA DE FISICA😏?</font>
+            <font color= "Navy">APROBARAS EL EXAMEN😏?</font>
         </div>
 
         <div class="buttons">
