--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="title">
             
-            <font color= "Navy">TE INVITO A LA IGLESIA A BUSCAR A JESUS😏?</font>
+            <font color= "Navy">TE GUSTA LA PROGRAMACIÓN WEB?</font>
         </div>
 
         <div class="buttons">
