--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="title">
             
-            <font color= "Navy">QUIERES IR A DESFILAR ?</font>
+            <font color= "Navy">QUIERES EMPRENDER SE QUE ERES UNA PERSONA DIFERENTE AL RESTO DEL MUNDO ?</font>
         </div>
 
         <div class="buttons">
