--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </div>
         <div class="title">
             
-            <font color= "Navy">TU ERES  EMPRENDEDOR(A) SE QUE ERES UNA PERSONA DIFERENTE AL RESTO DEL MUNDO ?</font>
+            <font color= "Navy">SE QUE ERES UNA PERSONA DIFERENTE AL RESTO DEL MUNDO,
+                VAMOS A EMPRENDER  ?</font>
         </div>
 
         <div class="buttons">
