--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         </div>
         <div class="title">
             
-            <font color= "Navy">SE QUE ERES UNA PERSONA DIFERENTE AL RESTO DEL MUNDO,
-                VAMOS A EMPRENDER  ?</font>
+            <font color= "Navy">PARA UNA PERSONA EMPRENDEDORA NO EXISTE LA PALABRA NO PUEDO  ?</font>
         </div>
 
         <div class="buttons">
