--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="title">
             
-            <font color= "Navy">PARA UNA PERSONA EMPRENDEDORA NO EXISTE LA PALABRA NO PUEDO  ?</font>
+            <font color= "Navy">VENDRAS AL ENCUENTRO JUVENIL ESTE SABADO 15 DE OCTUBRE 😏?</font>
         </div>
 
         <div class="buttons">
