--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="title">
             
-            <font color= "Navy">VENDRAS AL ENCUENTRO JUVENIL ESTE SABADO 15 DE OCTUBRE 😏?</font>
+            <font color= "Navy">VENDRAS A LA CAPACITACION ESTE SABADO 18 DE FEBRERO EN VILLA ANCARA 😏?</font>
         </div>
 
         <div class="buttons">
