--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="title">
             
-            <font color= "Navy">VENDRAS A LA CAPACITACION ESTE SABADO 18 DE FEBRERO EN VILLA ANCARA 😏?</font>
+            <H1><font color= "Navy" Face="times new roman">VENDRAS A LA CAPACITACION ESTE SABADO 18 DE FEBRERO EN VILLA ANCARA 😏?</font></H1>
         </div>
 
         <div class="buttons">
