--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="title">
             
-            <H1><font color= "Navy" Face="times new roman">VENDRAS A LA CAPACITACION ESTE SABADO 18 DE FEBRERO EN VILLA ANCARA 😏?</font></H1>
+            <H1><font Face="times new roman" color= "Navy" >VENDRAS AL ENCUENTRO JUVENIL ESTE SABADO 25 DE FEBREO EN LA IGLESIA "PAN DE VIDA"😏?</font></H1>
         </div>
 
         <div class="buttons">
