--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="title">
-            <font color= "Navy">😏😏🤔😏😏?</font>
+            <font color= "Navy">😏😏🤔😏?</font>
         </div>
         <div class="title">
             
