--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INVITACION</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
    
@@ -15,7 +15,7 @@
             <font color= "Navy">😏😏🤔😏?</font>
         </div>
         <div class="title">
-            <H1><font Face="times new roman" color= "Blue" >VENDRAS AL ENCUENTRO JUVENIL ESTE SABADO 25 DE FEBRERO EN LA IGLESIA DE HICHURAYA ALTA " PAN DE VIDA"?</font></H1>
+            <H1><font Face="times new roman" color= "Yellow" >VENDRAS AL ENCUENTRO JUVENIL ESTE SABADO 25 DE FEBRERO EN LA IGLESIA DE HICHURAYA ALTA " PAN DE VIDA"?</font></H1>
         </div>
 
         <div class="buttons">
