--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <font color= "Navy">😏😏🤔😏?</font>
         </div>
         <div class="title">
-            <H1><font Face="times new roman" color= "Yellow" >VENDRAS AL ENCUENTRO JUVENIL ESTE SABADO 25 DE FEBRERO EN LA IGLESIA DE HICHURAYA ALTA " PAN DE VIDA"?</font></H1>
+            <H1><font Face="times new roman" color= "Blue" >VENDRAS AL ENCUENTRO JUVENIL ESTE SABADO 25 DE FEBRERO EN LA IGLESIA DE HICHURAYA ALTA " PAN DE VIDA"?</font></H1>
         </div>
 
         <div class="buttons">
