--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="title">
-            <font color= "Navy">😏😏🤔😏?</font>
+            <font color= "Navy">😏😏JESUS TE AMA🤔😏?</font>
         </div>
         <div class="title">
             <H1><font Face="times new roman" color= "Blue" >VENDRAS AL ENCUENTRO JUVENIL ESTE SABADO 25 DE FEBRERO EN LA IGLESIA DE HICHURAYA ALTA " PAN DE VIDA"?</font></H1>
