--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <div class="title">
-            <font color= "Navy">😏😏JESUS TE AMA🤔😏?</font>
+            <font color= "Navy">😏😏Holiwis Amig@🤔😏?</font>
         </div>
         <div class="title">
-            <font Face="times new roman" color= "yellow" >VENDRAS AL ENCUENTRO JUVENIL ESTE SABADO 25 DE FEBRERO EN LA IGLESIA DE HICHURAYA ALTA " PAN DE VIDA"?</font>
+            <font Face="times new roman" color= "yellow" >Quieres formar parte de mi grupo ?</font>
         </div>
 
         <div class="buttons">
