--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <div class="title">
-            <font color= "Navy">😏😏Holiwis Amig@🤔😏?</font>
+            <font color= "Navy">😏😏Hola disculpa una pregunta🤔😏?</font>
         </div>
         <div class="title">
-            <font Face="times new roman" color= "yellow" >Quieres formar parte de mi grupo ?</font>
+            <font Face="times new roman" color= "yellow" >Quieres ser mi  amig@ ?</font>
         </div>
 
         <div class="buttons">
