--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="title">
-            <font color= "Navy">😏😏HOLIWOMO TE ENCUENTRAS🤔😏?</font>
+            <font color= "Navy">😏😏HOLIWIS COMO TE ENCUENTRAS🤔😏?</font>
         </div>
         <div class="title">
             <font Face="times new roman" color= "yellow" >TE GUSTAN LOS PRODUCTOS DIGITALES?</font>
