--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <div class="title">
-            <font color= "Navy">😏😏HOLIWIS COMO TE ENCUENTRAS🤔😏?</font>
+            <font color= "Navy">😏 Responde esta pregunta 👈🏻😅 😏💪🏻?</font>
         </div>
         <div class="title">
-            <font Face="times new roman" color= "yellow" >TE GUSTAN LOS PRODUCTOS DIGITALES?</font>
+            <font Face="times new roman" color= "yellow" >TE VAS A RENDIR AHORA QUE ESTAS CERCA DE LA VICTORIA?</font>
         </div>
 
         <div class="buttons">
