--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INVITACION</title>
+    <title>ALGO DIVERTIDO</title>
     <link rel="stylesheet"  href="./style.css">
 </head>
 
@@ -15,7 +15,7 @@
             <font color= "Navy">😏 Responde esta pregunta 👈🏻😅 😏💪🏻?</font>
         </div>
         <div class="title">
-            <font Face="times new roman" color= "yellow" >TE VAS A RENDIR AHORA QUE ESTAS CERCA DE LA VICTORIA?</font>
+            <font Face="times new roman" color= "yellow" >ME PASAS LA PRÁCTICA RESUELTA DE CALCULO  😅👈🏻?</font>
         </div>
 
         <div class="buttons">
