--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <font color= "Navy">😏 Responde esta pregunta 👈🏻😅 😏💪🏻?</font>
         </div>
         <div class="title">
-            <font Face="times new roman" color= "yellow" >ME PASAS LA PRÁCTICA RESUELTA DE CALCULO  😅👈🏻?</font>
+            <font Face="times new roman" color= "yellow" >TE ESTAS ESFORZANDO Y ESTAS SIENDO VALIENTE EN LO QUE HACES  😅👈🏻?</font>
         </div>
 
         <div class="buttons">
