--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <font color= "Navy">😏 Responde esta pregunta 👈🏻😅 😏💪🏻?</font>
         </div>
         <div class="title">
-            <font Face="times new roman" color= "yellow" >prometes echarle ganas al semestre ??😅👈🏻?</font>
+            <font Face="times new roman" color= "yellow" > se sincero (a) Estas Bien😅👈🏻?</font>
         </div>
 
         <div class="buttons">
