--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <div class="title">
-            <font color= "Navy">😏 Responde esta pregunta 👈🏻😅 😏💪🏻?</font>
+            <font color= "Navy">😏 me respondes esta pregunta👈🏻😅 😏💪🏻?</font>
         </div>
         <div class="title">
-            <font Face="times new roman" color= "yellow" > se sincero (a) Estas Bien😅👈🏻?</font>
+            <font Face="times new roman" color= "yellow" > se sincero (a) te encuentras  Bien😅👈🏻?</font>
         </div>
 
         <div class="buttons">
