--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="title">
-            <font color= "Navy">😏 me respondes esta pregunta👈🏻😅 😏💪🏻?</font>
+            <font color= "Navy">😏 RespondeME esta pregunta👈🏻😅 😏💪🏻?</font>
         </div>
         <div class="title">
             <font Face="times new roman" color= "yellow" > se sincero (a) te encuentras  Bien😅👈🏻?</font>
