--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <div class="title">
-            <font color= "Navy">😏 Respondeme esta pregunta👈🏻😅 😏💪🏻?</font>
+            <font color= "Navy">😏 Responde esta pregunta?👈🏻😅 😏💪🏻?</font>
         </div>
         <div class="title">
-            <font Face="times new roman" color= "yellow" > Quieres ser mi amig@😅👈🏻?</font>
+            <font Face="times new roman" color= "yellow" > ESTAS LIST@ PARA EL EXAMEN PSICOMETRICO😅👈🏻?</font>
         </div>
 
         <div class="buttons">
