--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <div class="title">
-            <font color= "Golden">😏 RESPONDE ESTA PREGUNTA CON SINCERIDAD?👈🏻 😏💪🏻?</font>
+            <font color= "yellow">😏 RESPONDE ESTA PREGUNTA CON SINCERIDAD?👈🏻 😏💪🏻?</font>
         </div>
         <div class="title">
-            <font Face="times new roman" color= "red" > ESTAS LIST@ PARA EL EXAMEN DE ALGEBRA😅👈🏻?</font>
+            <font Face="times new roman" color= "blue" > ESTAS LIST@ PARA EL EXAMEN DE ALGEBRA😅👈🏻?</font>
         </div>
 
         <div class="buttons">
