--- a/index.html
+++ b/index.html
@@ -4,20 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALGO DIVERTIDO</title>
-    <link rel="stylesheet"  href="./style.css">
+    <title>Bromas</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
-   
 <body>
     <div class="container">
         <div class="title">
             <font color= "yellow">😏 RESPONDE ESTA PREGUNTA CON SINCERIDAD?👈🏻 😏💪🏻?</font>
-        </div>
-        <div class="title">
+            <br>
             <font Face="times new roman" color= "blue" > ESTAS LIST@ PARA EL EXAMEN DE ALGEBRA😅👈🏻?</font>
         </div>
-
         <div class="buttons">
             <button id="btnyes" class="btn">Si</button>
             <button id="btnno" class="btn">No</button>
