--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="title">
-            <font color= "yellow">😏 RESPONDE ESTA PREGUNTA CON MUCHA SINCERIDAD?👈🏻 😏💪🏻?</font>
+            <font color= "yellow">😏 RESPONDE ESTA PREGUNTA CON SINCERIDAD?👈🏻 😏💪🏻?</font>
             <br>
             <font Face="times new roman" color= "blue" > ESTAS LIST@ PARA EL EXAMEN DE ALGEBRA😅👈🏻?</font>
         </div>
