--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="title">
             <font color= "yellow">😏 RESPONDE ESTA PREGUNTA CON SINCERIDAD?👈🏻 😏💪🏻?</font>
             <br>
-            <font Face="times new roman" color= "blue" > QUIERES SER MI NOVIA?😅👈🏻?</font>
+            <font Face="times new roman" color= "blue" > QUIERES SER MI NOVI@?😅👈🏻?</font>
         </div>
         <div class="buttons">
             <button id="btnyes" class="btn">Si</button>
