--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sorpresa</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sorpresa</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-  <div class="container">
-    <div class="title">
-      <font color="yellow">😏 RESPONDE ESTA PREGUNTA CON SINCERIDAD 😏💪🏻</font>
-      <br><br>
-      <font face="times new roman" color="blue">¿QUIERES SER MI NOVI@? 😅👈🏻</font>
+    <div class="container">
+        <div class="title">
+            <font color= "yellow">😏 RESPONDE ESTA PREGUNTA CON SINCERIDAD?👈🏻 😏💪🏻?</font>
+            <br>
+            <br>
+            <font Face="times new roman" color= "blue" > QUIERES SER MI NOVI@?😅👈🏻?</font>
+        </div>
+        <div class="buttons">
+            <button id="btnyes" class="btn">Si</button>
+            <button id="btnno" class="btn">No</button>
+        </div>
     </div>
 
-    <div class="buttons">
-      <button id="btnyes" class="btn">Sí 💚</button>
-      <button id="btnno" class="btn">No 💔</button>
-    </div>
-  </div>
-
-  <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
+
 </html>
