--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="container">
         <div class="title">
-            <font color= "yellow">😏 RESPONDE ESTA PREGUNTA CON SINCERIDAD?👈🏻 😏💪🏻?</font>
+            <font color= "yellow">😏 FELIZ DIA DE LA AMISTAD👈🏻 😏💪🏻?</font>
             <br>
             <br>
-            <font Face="times new roman" color= "blue" > QUIERES SER MI NOVI@?😅👈🏻?</font>
+            <font Face="times new roman" color= "blue" > QUIERES SER MI AMIG@😅👈🏻?</font>
         </div>
         <div class="buttons">
             <button id="btnyes" class="btn">Si</button>
